# space-filling-curves

./: .gitignore  hilbert.py  pyproject.toml  test_hilbert.py
.github/: README.md
densecurves/: gray.py  hilbert.py
tests/: test_hilbert.py
