[project]
name = "densecurves"
version = "0.1.0"
description = "Simple and efficient implementations of space-filling / Peano / FASS curves."
license = ".github/LICENSE.md"
readme = ".github/README.md"
authors = [{name="apehex", email="apehex@protonmail.com"}]
packages = [{include = "densecurves"}]

[tool.poetry.dependencies]
python = ">=3, <4"

[tool.poetry.group.dev.dependencies]
pytest = "*"

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
